<resources>
    <string name="app_name">FragmentLab</string>
    <string name="menu_icon">menu_icon</string>
    <string name="person_icon">person_icon</string>
    <string name="add_icon">add_icon</string>
    <string name="fav_icon">fav_icon</string>
    <string name="search_icon">search_icon</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="instagram">Instagram</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="see_translation">See Translation</string>
    <string name="timur_tleu">timur.tleu</string>
    <string name="almaty_kazakhstan">Almaty, Kazakhstan</string>
    <string name="send_img">send_img</string>
    <string name="_809_likes">809 likes</string>
    <string name="timur_tleu_title">Поделись, какой факт запомнился?</string>
    <string name="view_all_48_comments">View all 48 comments</string>
    <string name="unmaner13666">unmaner13666</string>
    <string name="unmaner13666_full">Unmaner13666 После туфлей должна была быть вставка Моргенштерна - да, я богатый ублюдок</string>
    <string name="timur_tleu_unmaner13666">timur.tleu @Unmaner13666 вот тоже хотел, но потом подумал что заюзалъ)</string>
    <string name="_2_hours_ago">2 hours ago</string>
</resources>